fixed main container overflow

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -34,6 +34,8 @@
 }
 
 #homePage {
+  position: relative;
+  overflow: hidden;
   background-image: url(../images/main-bg.jpg);
   background-size: cover;
   background-position: center center;
